preparing  to push to heroku

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Welcome to the Deepfake Detection Page</h1>
     <p>Upload a video file</p>
     <form method="post" enctype="multipart/form-data">
         <input type="file" name="file">
